# BveAtsPluginTemplate

./: .gitattributes  .gitignore  Build.bat  Build.ps1  Build.sh  CMakeLists.txt  README.MD
src/: BveAtsPlugin.c  BveAtsPlugin.h  EntryPoint.cpp  atsplugin.h
